--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
         </section>
         <section id="redes-sociais">
-
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="Home"></a><BR></BR> 
+            <a href="instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a><BR></BR>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="GitHub"></a><BR></BR>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="YouTube"></a><BR></BR>
+            <a href="facebook.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
